test/integration/bad/new/bad_data_modifier_decl.stan
generated quantities {
  data real x = 1;
}
